=== HEAD

* Automatically add NOT NULL to columns when adding primary keys if the database doesn't handle it (jeremyevans)

* Make prepared_statements plugin correctly handle lookup on joined datasets (jeremyevans) (#1244)

* Make Database#tables with :qualify=>true option handle table names with double underscores correctly (jeremyevans) (#1241)

* Add SQL::Identifier#[] and SQL::QualifiedIdentifier#[] for creating qualified identifiers (jeremyevans)

* Add support for Dataset#insert_conflict :conflict_where option, for a predicate to use in ON CONFLICT clauses (chanks) (#1240)

* Freeze Dataset::NON_SQL_OPTIONS, add private Dataset#non_sql_options, fixing thread safety issues during require (jeremyevans)

* Make the callable returned by Database#rollback_checker thread safe (jeremyevans)

* Make lazy_attributes and dataset_associations plugins work if insert_returning_select plugin is loaded before on model with no dataset (jeremyevans)

=== 4.39.0 (2016-10-01)

* Make active_model plugin use rollback_checker instead of after_rollback hook (jeremyevans)

* Add Database#rollback_checker, which returns a proc that returns whether the in progress transaction is rolled back (jeremyevans)

* Add Sequel::Database.set_shared_adapter_scheme to allow external adapters to support the mock adapter (jeremyevans)

* Make hook_class_methods plugin not use after commit/rollback model hooks (jeremyevans)

* Support add_column :after and :first options on MySQL (AnthonyBobsin, jeremyevans) (#1234)

* Support ActiveSupport 5 in pg_interval extension when weeks/hours are used in ActiveSupport::Duration objects (chanks) (#1233)

* Support IntegerMigrator :relative option, for running only the specified number of migrations up or down (jeremyevans)

* Make the touch plugin also touch associations on create in addition to update and delete (jeremyevans)

* Add :allow_manual_update timestamps plugin option for not overriding a manually set update timestamp (jeremyevans)
